# AD_Miner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  install_githooks.sh  main.py  package.json  placeholder.env  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
Docker/: Dockerfile  README.md  ad_miner.sh
ad_miner/: __main__.py
ad_miner/scripts/: analyse_cache.py  anon_graphdb.py
ad_miner/sources/html/templates/: base_footer.html  base_header.html  cards_modal_header.html  main_header.html
ad_miner/sources/js/: graph.js  hide_cards.js  icon.js  main_circle.js  search_bar.js
ad_miner/sources/modules/: azure.py  card_class.py  common_analysis.py  computers.py  config.json  description.json  domains.py  exploitability_ratings.json  generic_computing.py  generic_formating.py  graph_class.py  grid_class.py  histogram_class.py  istarmap.py  known_RIDs.json  known_SIDs.json  line_class.py  logger.py  main_page.py  neo4j_class.py  node_neo4j.py  objects.py  page_class.py  path_neo4j.py  rating.py  render_order.py  requests.json  smolcard_class.py  table_class.py  users.py  utils.py
ad_miner/sources/modules/controls/: __init__.py  anomaly_acl.py  as_rep.py  azure_aadconnect_users.py  azure_accounts_disabled_on_prem.py  azure_accounts_not_found_on_prem.py  azure_admin_on_prem.py  azure_cross_ga_da.py  azure_dormant_accounts.py  azure_last_passwd_change.py  azure_ms_graph_controllers.py  azure_reset_passwd.py  azure_roles.py  azure_users_paths_high_target.py  can_dcsync.py  can_read_gmsapassword_of_adm.py  can_read_laps.py  computers_admin_of_computers.py  computers_last_connexion.py  computers_list_of_rdp_users.py  computers_members_high_privilege.py  computers_os_obsolete.py  da_to_da.py  (+38 more)
doc/controls/: control_template.py
git_hooks/: pre-commit
scripts/: analyse_cache.py
sources/html/templates/: base_footer.html  cards_modal_header.html  main_header.html
sources/js/: graph.js  icon.js
sources/python/: cache_class.py  card_class.py  computers.py  description.json  domains.py  generic_computing.py  generic_formating.py  graph_class.py  grid_class.py  histogram_class.py  line_class.py  logger.py  main_page.py  neo4j_class.py  node_neo4j.py  objects.py  page_class.py  path_neo4j.py  rating.py  render_order.py  smolcard_class.py  table_class.py  users.py  utils.py
(+43 files in other folders)
